Pakcage json file changed

--- a/portal/package.json
+++ b/portal/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "test": "tsc"
