--- a/portal/package.json
+++ b/portal/package.json
@@ -11,15 +11,15 @@
     "test": "tsc"
   },
   "dependencies": {
+    "dotenv-cli": "^7.1.0",
+    "firebase": "^10.10.0",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "dotenv-cli": "^7.1.0",
-    "firebase": "^10.8.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "5.0.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -27,12 +27,12 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^4.6.1",
+    "dotenv-cli": "latest",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "daisyui": "^4.6.1",
-    "dotenv-cli": "latest"
+    "vite": "^4.2.0"
   },
   "browserslist": [
     ">0.2%",
